# MansAutomation

./: .gitignore  README.md  pyproject.toml  requirements.txt
mansautomation/: __init__.py  __main__.py
mansautomation/automation/: __init__.py  autofill_engine.py  datetime_utils.py  dom_extractor.py  form_detector.py  heuristics.py  human_intervention.py  interactions.py  presale.py  queue_wait.py  resilience.py  runner.py  sync.py
mansautomation/core/: __init__.py  bootstrap.py  config.py  container.py  events.py  exceptions.py  models.py  paths.py  settings_applier.py
mansautomation/gui/: automation_panel.py  main_window.py  notifications_panel.py  profile_panel.py  settings_panel.py  theme.py  widgets.py
mansautomation/notifications/: __init__.py  base.py  desktop.py  discord.py  dispatcher.py  telegram.py
mansautomation/plugins/: __init__.py  base.py  manager.py
mansautomation/profiles/: __init__.py  manager.py
mansautomation/services/: __init__.py  browser_service.py  crypto_service.py  logging_service.py  storage_service.py
mansautomation/utils/: async_qt.py
plugins/: __init__.py  generic_checkout.py  tiket_com.py
