[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mansautomation"
version = "1.0.0"
description = "Production-grade desktop automation assistant for fast online checkout workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "MansAutomation Team" }]
keywords = ["automation", "playwright", "pyqt6", "checkout", "autofill"]

dependencies = [
    "playwright>=1.45.0",
    "PyQt6>=6.7.0",
    "qasync>=0.27.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",
    "structlog>=24.1.0",
    "cryptography>=42.0.0",
    "aiohttp>=3.9.5",
    "aiosqlite>=0.20.0",
    "PyYAML>=6.0.1",
    "plyer>=2.1.0",
    "platformdirs>=4.2.0",
    "rapidfuzz>=3.9.0",
    "tenacity>=8.3.0",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mansautomation = "mansautomation.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mansautomation*"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "RET", "SIM", "PL"]
ignore = ["S101", "PLR0913", "PLR2004", "S311"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
